# peer-observer

./: .dockerignore  .gitignore  Cargo.toml  README.md  shell.nix
.github/: dependabot.yml
.github/workflows/: rust-nix.yml  rust-ubuntu.yml  rust.yml
archiver/: Cargo.toml
docker/: bitcoin-node.dockerfile  build.ps1  build.sh  docker-compose.yml  nats.dockerfile  peer-base.dockerfile  peer-connectivity-check.dockerfile  peer-logger.dockerfile  peer-metrics.dockerfile  peer-websocket.dockerfile  run.ps1  run.sh
extractor/: .gitignore  Cargo.toml  build.rs
extractor/bcc-programs/: net_connections.c  net_in_outbound.c
extractor/src/: error.rs  main.rs
extractor/src/bpf/: tracing.bpf.c  vmlinux.h
extractors/ebpf/: Cargo.toml  README.md  build.rs
extractors/ebpf/src/: error.rs  main.rs
extractors/ebpf/src/bpf/: tracing.bpf.c
extractors/log/: Cargo.toml  README.md
extractors/log/src/: error.rs  lib.rs  main.rs
extractors/log/tests/: integration.rs
extractors/p2p/: Cargo.toml  README.md
extractors/p2p/src/: error.rs  lib.rs  main.rs
extractors/p2p/tests/: integration.rs
extractors/rpc/: Cargo.toml  README.md
extractors/rpc/src/: error.rs  lib.rs  main.rs
extractors/rpc/tests/: integration.rs
logger/: Cargo.toml
logger/src/: main.rs
metric-server/: Cargo.toml
metric-server/src/: main.rs
metrics/: Cargo.toml
metrics/dashboards/: addr-message-timestamp-offset.json  addr-per-addr-message.json  addr-service-bits.json  connections.json  feefilter.json  inv.json  messages.json  pings.json  reject.json  version.json
metrics/src/: main.rs  metrics.rs
processor/: Cargo.toml
processor/bcc-programs/: net_connections.c
processor/src/: main.rs  processing.rs  types.rs
protobuf/: README.md  event_msg.proto  gen-python.sh  log_extractor.proto  mempool.proto  net_conn.proto  net_msg.proto  p2p_extractor.proto  rpc.proto  validation.proto
protobuf/p2pnetobserver_types_py/: connection_pb2.py  p2p_pb2.py  wrapper_pb2.py
protobuf/proto-types/: addrman.proto  event_msg.proto  fn_timings.proto  mempool.proto  net_conn.proto  net_msg.proto  rpc.proto  validation.proto  wrapper.proto
protobuf/protos/: connection.proto  p2p.proto  wrapper.proto
protobuf/python-types/: addrman_pb2.py  event_msg_pb2.py  mempool_pb2.py  net_conn_pb2.py  net_msg_pb2.py  p2p_extractor_pb2.py  p2p_pb2.py  primitive_pb2.py  rpc_pb2.py  validation_pb2.py  wrapper_pb2.py
shared/: Cargo.toml  build.rs
shared/ip-lists/: .gitignore  README.md  bitprojects-io.txt  generate-bitprojects-list.py  gmaxbanlist.txt  monerobanlist.txt  preprocess-monero-block-list.py  torbulkexitlist
shared/src/: addrman.rs  bcc_types.rs  connection.proto  connection.rs  ctypes.rs  event_msg.rs  fn_timings.rs  lib.rs  log_matchers.rs  mempool.rs  metricserver.rs  nats_publisher_for_testing.rs  nats_subjects.rs  net_conn.rs  net_msg.rs  p2p.proto  p2p.proto3  p2p.rs  primitive.proto  primitive.rs  rpc.rs  util.rs  validation.rs  wrapper.proto  wrapper.rs
shared/src/protobuf/: addrman.rs  ctypes.rs  event_msg.rs  log_extractor.rs  mempool.rs  mod.rs  net_conn.rs  net_msg.rs  p2p_extractor.rs  primitive.rs  rpc.rs  validation.rs
shared/src/testing/: mod.rs  nats_publisher.rs  nats_server.rs
tools/addr-connectivity-rs/: Cargo.toml
tools/addr-connectivity-rs/src/: main.rs  metrics.rs
tools/addrman-observer/: Cargo.toml  index.html
tools/addrman-observer/src/: main.rs
tools/addrman-websocket-rs/: Cargo.toml  index.html
tools/addrman-websocket-rs/src/: main.rs
tools/blocks-with-coinbase/: README.md  blocks-with-coinbase.py  shell.nix
tools/connectivity-check/: Cargo.toml  README.md
tools/connectivity-check/src/: main.rs  metrics.rs  metricserver.rs
tools/heterogenous-invs-py/: hetero-invs.py
tools/linkinglion-traffic/: linkinglion-traffic.py
tools/logger/: Cargo.toml  README.md
tools/logger/src/: error.rs  lib.rs  main.rs
tools/logger/tests/: integration.rs
tools/metrics/: Cargo.toml  README.md
tools/metrics/dashboards/: addr-message-timestamp-offset.json  addr-per-addr-message.json  addr-service-bits.json  connections.json  feefilter.json  inv.json  mempool.json  messages.json  pings.json  reject.json  version.json
tools/metrics/dashboards/playlist/: addr-inbound-entries.json  addr-inbound-received.json  addr-number-of-ratelimited-addresses-by-currently-connected-peers.json  addr-rate-limited-peers.json  addr-service-bits.json  addr-share-of-peers-we-participate-in-addr-relay-with.json  addr-share-of-ratelimited-addresses.json  compactblock-number-of-peers-our-node-considers-as-bip152-high-bandwidth-peer.json  compactblock-number-of-peers-that-consider-us-to-be-bip152-high-bandwidth-peer.json  compactblock-reconstruction-without-tx-req.json  compactblock-share-of-peers-that-consider-us-to-be-bip152-high-bandwidth-peer.json  connections-age-of-closed-connections.json  connections-closed-by-network.json  connections-closed.json  connections-connected-peers-protocol-versions.json  connections-inbound-connection-anomaly-detection.json  connections-inbound-per-host.json  connections-inbound-per-subnet.json  connections-iplist-gmax-2018-banlist.json  connections-iplist-linkinglion-banlist.json  connections-iplist-monero-banlist.json  connections-iplist-tor-exit-nodes-list.json  logs.json  (+32 more)
tools/metrics/src/: error.rs  lib.rs  main.rs  metrics.rs  stat_util.rs
tools/metrics/tests/: integration.rs
tools/ping-recorder-py/: ping-recorder.py  shell.nix
tools/record-getblocktxn-py/: README.md  record-getblocktxn.py  shell.nix
tools/spy-detector/: Cargo.toml
tools/spy-detector/src/: main.rs
tools/websocket/: Cargo.toml  README.md
tools/websocket/src/: lib.rs  main.rs
tools/websocket/tests/: integration.rs
tools/websocket/www/: .gitignore  addrrelay.html  netinfo.html  p2p-circle.html  peers.html  pingpong.html  txrelay.html  websockets.json
tools/websocket/www/js/: lib.js  websocket-picker.js
utils/: Cargo.toml  README.md  build.rs  cidr-to-addresses.py  monerobanlist.txt
utils/src/: gmaxbanlistips.rs  lib.rs  monerobanlistips.rs  torexitips.rs
(+1 files in other folders)
