[package]
name = "extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }

prost = "0.10"
nng = "1.0.1"
libbpf-rs = "0.23"
libc = "0.2"

[build-dependencies]
libbpf-cargo = "0.23"

[features]
# Treat warnings as a build error.
strict = []
