[package]
name = "extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }

prost = "0.14"
libbpf-rs = "0.25"

[build-dependencies]
libbpf-cargo = "0.25"

[features]
# Treat warnings as a build error.
strict = []
