[package]
name = "processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }

prost = "0.10"
bcc = "0.0.32"

# Use custom branch until #249 and #939 are merged (and released)
bitcoin = {git = "https://github.com/0xB10C/rust-bitcoin", branch = "2022-04-no-dev"}
#bitcoin = "0.27.1"

nng = "1.0.1"
