[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.14.1"
bitcoin = "0.32"
base32 = "0.5.1" # for encoding Tor/Onion addresses
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.45", features = ["derive"] }
simple_logger = "5.0.0"
log = "0.4"
async-nats = "0.42.0"
prometheus = "0.14.0"
lazy_static = "1.5.0"
corepc-client = { version = "0.9.0",  features = ["client-sync"]}
tokio = { version = "1.47.0", features = ["rt-multi-thread", "process", "signal"] }
futures = "0.3.31"
rand = "0.9.2"
corepc-node = { version = "0.9.0", features = ["download", "29_0"] }

[build-dependencies]
prost-build = "0.14"

[dev-dependencies]
hex = "0.4"

[features]
# Treat warnings as a build error.
strict = []
