[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.14.1"
bitcoin = "0.32"
base32 = "0.5.1" # for encoding Tor/Onion addresses
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.45", features = ["derive"] }
simple_logger = "5.0.0"
log = "0.4"
async-nats = "0.44.1"
prometheus = "0.14.0"
lazy_static = "1.5.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "process", "signal"] }
futures = "0.3.31"
rand = "0.9.2"
chrono = "0.4"
regex = "1.10"

# using https://github.com/rust-bitcoin/corepc/commit/3a9c52ad5a1ecb47a64342471b6cf8bbbe800780 util 0.10.0 is taged
# to have https://github.com/rust-bitcoin/corepc/pull/367 (see https://github.com/0xB10C/peer-observer/issues/260)
corepc-node = { git = "https://github.com/rust-bitcoin/corepc", rev = "3a9c52ad5a1ecb47a64342471b6cf8bbbe800780", features = ["download", "29_0"] }
corepc-client = { git = "https://github.com/rust-bitcoin/corepc", rev = "3a9c52ad5a1ecb47a64342471b6cf8bbbe800780", features = ["client-sync"]}

[build-dependencies]
prost-build = "0.14"

[dev-dependencies]
hex = "0.4"

[features]
# Treat warnings as a build error.
strict = []
