[package]
name = "connectivity-check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../../shared" }
utils = { path= "../../utils" }

prost = "0.10"
nng = "1.0.1"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
rand = "0.8.5"
prometheus = "0.13.3"
lazy_static = "1.4.0"
log = "0.4.17"
simple_logger = "4.0.0"


[features]
# Treat warnings as a build error.
strict = []
