[package]
name = "addrman-observer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
log = "0.4.17"
env_logger = "0.10.0"
tokio = { version = "1.27.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.12"
tokio-tungstenite = "0.18.0"
warp = "0.3.4"

shared = { path = "../../shared" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.10"
nng = "1.0.1"

[features]
# Treat warnings as a build error.
strict = []
