[package]
name = "connectivity-check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../../shared" }

nng = "1.0.1"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
rand = "0.8.5"
prometheus = "0.13.3"
lazy_static = "1.4.0"
log = "0.4.17"
csv = "1.2.1"
serde = { version = "1.0", features = ["derive"] }


[features]
# Treat warnings as a build error.
strict = []
