[package]
name = "connectivity-check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../../shared" }

crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
rand = "0.9.2"
csv = "1.3.1"
serde = { version = "1.0", features = ["derive"] }


[features]
# Treat warnings as a build error.
strict = []
