[package]
name = "websocket"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../../shared" }
nng = "1.0.1"
tungstenite = "0.21.0"
async-std = { version = "1.12.0", features = ["attributes"] }
async-broadcast = "0.7.0"
serde_json = "1.0.117"

[features]
# Treat warnings as a build error.
strict = []
