[package]
name = "websocket"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../../shared" }
tokio-tungstenite = "0.28.0"
serde_json = "1.0.142"

[features]
# Treat warnings as a build error.
strict = []
# Run integration tests needing a NATS server.
nats_integration_tests = []
